[metadata]
name = cutpaste
version = attr: cutpaste.version.version
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
  pycut = cutpaste.cut:main
  pypaste = cutpaste.paste:main
